Module 3/m03a02animal2-handout/grading/2024-09-16-11-40-59/compile.err
Animal.java:23: error: 'else' without 'if'
        } else System.out.println("Invalid answer!");
          ^
1 error
